clusters/cluster0/kubernetes/apps/gregbob/gregbob/irc/irc-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: irc
  namespace: gregbob
spec:
  hostnames:
  - irc.gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: network
  rules:
  - backendRefs:
    - name: irc-service
      port: 6667
    matches:
    - path:
        type: PathPrefix
        value: /
